# ledger-donjon-ctf-2020

./: README.md
elliptic_relations/: README.md  challenge.yml  elliptic_relations.elf
elliptic_relations/app-ctf/: Makefile
elliptic_relations/app-ctf/src/: challenge.c  challenge.h  main.c
elliptic_relations/scripts/: obfuscate.py  pwn.py
ghostbuster/: .gitignore  challenge.yml  secret.txt
ghostbuster/attacker/: monitor.c  reconstruct.py
ghostbuster/exploit/: Makefile  attacker.c  common.h  run.sh  train.s
ghostbuster/ghostbuster/: Dockerfile
modern_cryptocomputer/: challenge_for_modern_cryptocomputer_easy.yml  challenge_for_modern_cryptocomputer_hard.yml
modern_cryptocomputer/bootstrap_and_solve/: bootstrap_instance.sh  solve.md
modern_cryptocomputer/bootstrap_and_solve/flagchecker/: flagchecker.abi  flagchecker.cpp  flagchecker.wasm
modern_cryptocomputer/bootstrap_and_solve/solution/: solution.abi  solution.cpp  solution.wasm
modern_cryptocomputer/deployment/: Dockerfile  blockchain.tar.bz2  docker-compose.yml  eos_patch.patch  secrets.env  start_genesis_nodeos  start_nodeos
picohsm/: README.md  challenge-1.yml  challenge-2.yml  challenge-3.yml  message.hex
picohsm/firmware-mcu/: firmware-mcu-ctf
picohsm/firmware-mcu/release/: firmware-mcu
picohsm/firmware-mcu/src/: CMakeLists.txt  boot.s  delay.cxx  delay.hxx  gcc-stm32.cmake  linker_script  main.cxx  panic.cxx  panic.hxx  patch.py  ring_buffer.hxx  stm32f205.hxx  system.hxx  usart.cxx  usart.hxx  util.cxx  util.hxx  w5500.cxx  w5500.hxx
picohsm/firmware-sec/release/: firmware.hex
picohsm/firmware-sec/src/: CMakeLists.txt  keys.hxx  main.cxx  pin.hxx  uart.cxx  uart.hxx
picohsm/hardware/: ethernet.kicad_sch  ft232.kicad_sch  pico-hsm.kicad_pcb  pico-hsm.kicad_pro  pico-hsm.kicad_sch  secure_mcu.kicad_sch
picohsm/shellcode/: help.py  makefile  p0wn.py  script.ld  shell-fault.c  shell-getflag.c  shell-pin.c  shell.s  symbols.ld
smpc_signature/: README.md  challenge.yml  generate_split_key.py  get_flag.py  public_key.pem  sign_data.py  smpc_signer.py
smpc_signature/challenge_generation/: generate_flag_params.py  secret_key.pem  secret_share_01.json  secret_share_02.json  secret_share_03.json  secret_share_04.json  secret_share_05.json  secret_share_06.json  secret_share_07.json  secret_share_08.json  secret_share_09.json  secret_share_10.json  secret_share_11.json  secret_share_12.json  secret_share_13.json  secret_share_14.json  secret_share_15.json  secret_share_16.json  solve_from_trace.py
